Fixed correct intro text for cases

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -10,7 +10,7 @@
             {{ if eq .Section "om-ai" }}
             <p class="posts-intro">Här samlar vi artiklar och nyheter om AI.</p>
             {{ else if eq .Section "case" }}
-            <p class="posts-intro">Här samlar vi kundcase och exempel på hur OMAI utvecklar AI-agenter.</p>
+            <p class="posts-intro">Här samlar vi kundcase och exempel på hur OMAI hjälpt våra kunder att växa, effektivisera och ligga steget före.</p>
             {{ end }}
         </div>
         
