--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -27,7 +27,7 @@
                             <a href="https://www.linkedin.com/company/omaidev/about/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/omai.dev/" target="_blank" rel="noopener noreferrer">Instragram</a>
+                            <a href="https://www.instagram.com/omai.dev/" target="_blank" rel="noopener noreferrer">Instagram</a>
                         </li>
                         <li>
                             <a href="#" onclick="event.preventDefault(); openCookiePolicy(); return false;">Cookiepolicy</a>
