--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -38,8 +38,10 @@
     <meta name="description" content="{{ $description }}">
     {{ $canonicalURL := .Site.Params.canonicalURL | default "https://omai.dev" }}
     {{ $canonicalURL = $canonicalURL | strings.TrimSuffix "/" }}
-    {{ $ogImage := printf "%s%s" $canonicalURL ("/images/logos/omai_73B7E1.png" | relURL) }}
-    {{ $pageURL := printf "%s%s" $canonicalURL .Permalink }}
+    {{ $ogImagePath := "/images/logos/omai_73B7E1.png" | relURL }}
+    {{ $ogImage := printf "%s%s" $canonicalURL $ogImagePath }}
+    {{ $pagePath := .RelPermalink }}
+    {{ $pageURL := printf "%s%s" $canonicalURL $pagePath }}
     {{ $pageTitle := "" }}
     {{ if .IsHome }}
         {{ $pageTitle = .Site.Title }}
@@ -56,6 +58,9 @@
     <meta property="og:url" content="{{ $pageURL }}">
     <meta property="og:type" content="{{ $ogType }}">
     <meta property="og:image" content="{{ $ogImage }}">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="296">
+    <meta property="og:image:type" content="image/png">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="{{ $pageTitle }}">
